--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 tensorflow-cpu
-tflearn
+tflearn~=0.5.0
 pympler
-cvxopt
+cvxopt~=1.2.6
 seaborn
-pandas
-yfinance
+pandas~=1.3.1
+yfinance~=0.1.63
 Pillow
+setuptools~=57.0.0
+numpy~=1.19.5
+scipy~=1.7.0
+matplotlib~=3.4.2
+yahoo-fin
